pages only tablet adaptive

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
         <div class="hero about__hero">
             <div class="wrapper">
                 <div class="hero__first-row">
-                    <div class="hero__first-row__left">
+                    <div class="hero__first-row__left innerWhiteStripe">
                         <h1 class="white">АГЕНТСТВО КОМПЛЕКСНОГО PERFOMANCE-МАРКЕТИНГА</h1>
                         <nav class="breadcrumbs">
                             <ul class="breadcrumbs__list">
@@ -148,8 +148,8 @@
                         </nav>
                     </div>
                     <div class="hero__first-row__right">
-                        <a href="#" download class="download-link">
-                            СКАЧАТЬ ПРЕЗЕНТАЦИЮ АГЕНТСТВА <span>PDF, 2 MB</span></a>
+                        <a href="#" download class="about__download-link">
+                            СКАЧАТЬ<br>ПРЕЗЕНТАЦИЮ АГЕНТСТВА <span>PDF, 2 MB</span></a>
                     </div>
                 </div>
                 <div class="hero__second-row">
@@ -158,7 +158,7 @@
                              class="about__img"
                              alt="агентство комплексного perfomance-маркетинга"/>
                         <span class="list__title">Мы работали более чем с 250 проектами разной тематики из разных категорий:</span>
-                        <ul class="about-project__list">
+                        <ul class="about__project-list">
                             <li>IT и digital продукты</li>
                             <li>Строительные компании</li>
                             <li>Розничные магазины</li>
@@ -178,15 +178,15 @@
                             глобальную экономическую сеть и при этом - призваны к ответу.
                             Учитывая ключевые сценарии поведения, социально-экономическое развитие создаёт предпосылки
                             для поэтапного и последовательного развития общества. </p>
-                        <quotes>
+                        <blockquote>
                             <p>Вот вам яркий пример современных тенденций - реализация намеченных плановых заданий
                                 однозначно фиксирует необходимость системы массового участия.</p>
-                            <div class="quotes__bottom">
-                                <img src="./images/icon_pogodin.png" alt="">
-                                <span class="quotes__name">Леонид Погодин</span>
-                                <span class="quotes__job">генеральный директор, основатель</span>
+                            <div class="boss-info">
+                                <img src="./images/icon_pogodin.png" alt="Леонид Погодин">
+                                <span class="boss-info__name">Леонид Погодин</span>
+                                <span class="boss-info__job">генеральный директор, основатель</span>
                             </div>
-                        </quotes>
+                        </blockquote>
                         <p class="about__text_2">Вот вам яркий пример современных тенденций - реализация намеченных
                             плановых заданий однозначно фиксирует необходимость системы массового участия.
                             Противоположная точка зрения подразумевает, что действия представителей оппозиции.</p>
@@ -229,7 +229,88 @@
                 <li class="tasks__item">
                     <div class="tasks__content">
                         <div class="tasks__content__text">
-                            <h3 class="tasks__item__title">ЛИДОГЕНЕРАЦИЯ И<br>ПРИВЛЕЧЕНИЕ</h3>
+                            <h3 class="tasks__content__title">ЛИДОГЕНЕРАЦИЯ И<br>ПРИВЛЕЧЕНИЕ</h3>
+                            <span>нового трафика</span>
+                        </div>
+                        <a href="#" class="btn btn_round">
+                            <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                      fill="#ffffff"/>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="tasks__item">
+                    <div class="tasks__content">
+                        <div class="tasks__content__text">
+                            <h3 class="tasks__content__title">УВЕЛИЧЕНИЕ<br>ПРОДАЖ</h3>
+
+                        </div>
+                        <a href="#" class="btn btn_round">
+                            <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                      fill="#ffffff"/>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="tasks__item">
+                    <div class="tasks__content">
+                        <div class="tasks__content__text">
+                            <h3 class="tasks__content__title">ПРОДВИЖЕНИЕ<br>ОФФЛАЙН БИЗНЕСА</h3>
+                            <span>в интернете</span>
+                        </div>
+                        <a href="#" class="btn btn_round">
+                            <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                      fill="#ffffff"/>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="tasks__item">
+                    <div class="tasks__content">
+                        <div class="tasks__content__text">
+                            <h3 class="tasks__content__title">ОПТИМИЗАЦИЯ<br>БЮДЖЕТА РЕКЛАМЫ</h3>
+                            <span>и сокращение расходов</span>
+                        </div>
+                        <a href="#" class="btn btn_round">
+                            <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                      fill="#ffffff"/>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="tasks__item">
+                    <div class="tasks__content">
+                        <div class="tasks__content__text">
+                            <h3 class="tasks__content__title">ПОВЫШЕНИЕ<br>ЛОЯЛЬНОСТИ</h3>
+                            <span>и работа с репутацией</span>
+                        </div>
+                        <a href="#" class="btn btn_round">
+                            <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                      fill="#ffffff"/>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="tasks__item">
+                    <div class="tasks__content">
+                        <div class="tasks__content__text">
+                            <h3 class="tasks__content__title">МОБИЛЬНЫЕ<br>ПРИЛОЖЕНИЯ</h3>
+                            <span>продвижение Mobile Apps</span>
                         </div>
                         <a href="#" class="btn btn_round">
                             <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
