--- a/social.html
+++ b/social.html
@@ -48,7 +48,8 @@
                         <a href="contacts.html" class="header__top__nav-link">КОНТАКТЫ</a>
                     </li>
                 </ul>
-                <ul class="header__nav-list_bottom header__nav-list_bottom_common" aria-label="services navigation услуги">
+                <ul class="header__nav-list_bottom header__nav-list_bottom_common"
+                    aria-label="services navigation услуги">
                     <ali>
                         <a href="#" class="header__nav-list__link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -131,13 +132,6 @@
 
         </div>
     </div>
-
-    <div class="line_white"></div>
-
-    <!--    <div class="wrapper">-->
-    <!--        <div class="header__bottom">-->
-    <!--        </div>-->
-    <!--    </div>-->
 </header>
 
 <div class="s_hero">
@@ -147,21 +141,22 @@
                 <div class="hero__first-row">
                     <div class="hero__first-row__left">
                         <h1 class="white">ПРОДВИЖЕНИЕ ВАШЕГО БИЗНЕСА В СОЦИАЛЬНЫХ СЕТЯХ</h1>
-                        <a href="/services.html" class="btn btn_white">Все услуги</a>
+                        <a href="#" class="btn btn_transperent_white btn_arrowL">Все услуги</a>
                     </div>
                     <div class="hero__first-row__right">
-                        <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</a>
+                        <a href="#callback_modal" class="btn btn_gradient btn_arrowR" data-fancybox-modal>ЗАКАЗАТЬ
+                            КОНСУЛЬТАЦИЮ</a>
                     </div>
                 </div>
                 <div class="hero__second-row">
-                    <ul class="benefits__list benefits__list_complex">
-                        <li class="benefits__item benefits__item_complex">
+                    <ul class="benefits__list benefits__list_social">
+                        <li class="benefits__item benefits__item_social">
                             Настройка чат-ботов<br>и рассылок
                         </li>
-                        <li class="benefits__item benefits__item_complex">
+                        <li class="benefits__item benefits__item_social">
                             Запуск лидогенерации<br>за 5 дней
                         </li>
-                        <li class="benefits__item benefits__item_complex">
+                        <li class="benefits__item benefits__item_social">
                             Создание и дизайн<br>аккаунта
                         </li>
                     </ul>
@@ -361,7 +356,8 @@
                 <div class="prices__info">Стоимость ведения соцсетей:<br><span class="blue">20 000 руб/мес.</span>
                 </div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small"
+                       data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
@@ -375,10 +371,11 @@
                     <li class="prices__list__item">Анализ СТК, конверсии и цены заявки</li>
                     <li class="prices__list__item">Запуск ремаркетинга и кампаний на похожую аудиторию</li>
                 </ul>
-                <div class="prices__info">Стоимость настройки таргетированной рекламы:<br><span class="blue">20 000 руб/мес.</span>
+                <div class="prices__info">Стоимость настройки таргетированной<br>рекламы:<span class="blue">20 000 руб/мес.</span>
                 </div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small"
+                       data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
@@ -394,7 +391,8 @@
                 </ul>
                 <div class="prices__info">Стоимость настройки и ведения: <span class="blue">20 000 руб/мес.</span></div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small"
+                       data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
@@ -464,22 +462,25 @@
 
 <div class="s_approach">
     <div class="wrapper_fullHD">
-        <div class="approach">
+        <div class="approach approach_social">
             <div class="wrapper_right">
-                <img src="images/bg_complex_avtor.png" class="approach__img">
-                <div class="approach__text-block">
-                    <h2 class="title"><span class="green">АВТОРСКИЙ</span> ПОДХОД К ИНТЕРНЕТ-РЕКЛАМЕ</h2>
+                <h2 class="title"><span class="green">АВТОРСКИЙ</span> ПОДХОД К РЕКЛАМЕ<br>ВКОНТАКТЕ, FACEBOOK И
+                    INSTAGRAM</h2>
 
+                <img src="images/bg_social_avtor.jpg" class="approach__img_social">
+
+                <div class="approach__text-block_social">
                     <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
                         объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
                         исследований способствует подготовке и реализации поставленных обществом задач. Не следует,
                         однако, забывать, что повышение уровня гражданского сознания не оставляет шанса для
                         благоприятных перспектив.</p>
                     <p>С учётом сложившейся международной обстановки, разбавленное изрядной долей эмпатии, рациональное
-                        мышление является качественно новой ступенью существующих финансовых и административных условий.
-                        Безусловно, высокое качество позиционных исследований создаёт необходимость включения в
+                        мышление является качественно новой ступенью существующих финансовых и административных
+                        условий.</p>
+                    <p>Безусловно, высокое качество позиционных исследований создаёт необходимость включения в
                         производственный план целого ряда внеочередных мероприятий с учётом комплекса системы массового
-                        участия.</p>
+                        участия. </p>
                 </div>
             </div>
         </div>
@@ -490,36 +491,31 @@
     <div class="wrapper">
         <div class="voronka voronka_green">
             <h2 class="title">СОЗДАДИМ <span class="green">ВОРОНКУ</span> ПРОДАЖ<br>ДЛЯ ВАШЕГО БИЗНЕСА!</h2>
-            <ul class="voronka__list">
+            <ul class="voronka__list voronka__list_green">
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Рассказываем о продукте</span>
-                    <span class="voronka__line__block voronka__line__block_center">Потенциальные клиенты пока не знают продукт, ищут решения проблемы</span>
-                    <span class="voronka__line__block voronka__line__block_right">Баннерная реклама в РСЯ и КМС, видеореклама и YouTube</span>
+                    <span class="voronka__line__block voronka__line__block_left">Рассказываем<br>о продукте</span>
+                    <span class="voronka__line__block voronka__line__block_center">Потенциальные клиенты пока не знают<br>продукт, ищут решения проблемы</span>
+                    <span class="voronka__line__block voronka__line__block_right">Реклама по полу, возрасту, интересам.<br>Сегментирование аудитории.</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Повышаем интерес, стимулируем покупку</span>
-                    <span class="voronka__line__block voronka__line__block_center">Узнают продукт, начинают его изучать</span>
-                    <span class="voronka__line__block voronka__line__block_right">Графическая рреклама в сетях (РСЯ и КМС), поисковый баннер на Яндексе</span>
+                    <span class="voronka__line__block voronka__line__block_left">Повышаем интерес,<br>стимулируем покупку</span>
+                    <span class="voronka__line__block voronka__line__block_center">Узнают продукт, начинают<br>его изучать</span>
+                    <span class="voronka__line__block voronka__line__block_right">Часть трафика ведется на сайт, часть - на<br>подписку в соц сети. Анализ конверсии.</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Привлекаем пользователя на сайте</span>
-                    <span class="voronka__line__block voronka__line__block_center">Готовы покупать, ищут где приобрести продукт</span>
-                    <span class="voronka__line__block voronka__line__block_right">Поисковые кампании Яндекс.Директ, Google.Ads, поисковы ремаркетинг</span>
+                    <span class="voronka__line__block voronka__line__block_left">Стимулируем<br>покупку</span>
+                    <span class="voronka__line__block voronka__line__block_center">Готовы покупать, ищут где<br>приобрести продукт</span>
+                    <span class="voronka__line__block voronka__line__block_right">Реклама в формате лид-форм,<br>на взаимодействовавших с аккаунтом</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей, ушедших с сайта без покупки</span>
-                    <span class="voronka__line__block voronka__line__block_center">Перешли на сайт</span>
-                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads, Facebook, рассылка Вконтакте, Instagram</span>
+                    <span class="voronka__line__block voronka__line__block_left">Догоняем<br>аудиторию сайта</span>
+                    <span class="voronka__line__block voronka__line__block_center">Были на сайте, но не<br>совершили заказ</span>
+                    <span class="voronka__line__block voronka__line__block_right">Рекламный трафик на подписку<br>и на лид-магнит</span>
                 </li>
                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Возвращаем пользователей, ушедших с сайта без покупки</span>
-                    <span class="voronka__line__block voronka__line__block_center">Купили товар на сайте</span>
-                    <span class="voronka__line__block voronka__line__block_right">Динамически ремаркетинг Google.Ads, Facebook, рассылка Вконтакте, Instagram</span>
-                </li>
-                 <li class="voronka__line">
-                    <span class="voronka__line__block voronka__line__block_left">Запускаем локальную рекламу, стимулируем посещение точки</span>
-                    <span class="voronka__line__block voronka__line__block_center">Находятся рядом с офисом</span>
-                    <span class="voronka__line__block voronka__line__block_right">Гиперлокальная реклама Яндекс.Директ, реклама по районам в Google.Ads</span>
+                    <span class="voronka__line__block voronka__line__block_left">Прогрев и расширение<br>аудитории</span>
+                    <span class="voronka__line__block voronka__line__block_center">Находятся рядом<br>с офисом</span>
+                    <span class="voronka__line__block voronka__line__block_right">Реклама по базе похожей аудитории<br>(look-a-like). Рассылка по базе подписчиков</span>
                 </li>
             </ul>
         </div>
@@ -530,7 +526,7 @@
     <div class="wrapper_fullHD">
         <div class="partners">
             <div class="wrapper">
-                <h2 class="title"><span class="green">НАМ</span> ДОВЕРЯЮТ</h2>
+                <h2 class="title"><span class="green">НАМ</span> ДОВЕРЯЮТ:</h2>
                 <div class="partners__list">
                     <div class="partners__item">
                         <div class="partners__item__wrapper">
@@ -633,7 +629,8 @@
                         </button>
 
                         <input type="checkbox" class="notice_checked" checked="" name="notice" id="notice">
-                        <label class="notice_checked__label callback__notice" for="notice"> Я согласен с условиями обработки данных</label>
+                        <label class="notice_checked__label callback__notice" for="notice"> Я согласен с условиями
+                            обработки данных</label>
                     </div>
                 </form>
             </div>
