--- a/web-analit.html
+++ b/web-analit.html
@@ -49,7 +49,7 @@
                     </li>
                 </ul>
                 <ul class="header__nav-list_bottom header__nav-list_bottom_common" aria-label="services navigation услуги">
-                    <ali>
+                    <li>
                         <a href="#" class="header__nav-list__link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -62,7 +62,7 @@
                             </svg>
                             КОНТЕКСТНАЯ РЕКЛАМА
                         </a>
-                    </ali>
+                    </li>
                     <li>
                         <a href="#" class="header__nav-list__link">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -132,34 +132,28 @@
         </div>
     </div>
 
-    <div class="line_white"></div>
-
-    <!--    <div class="wrapper">-->
-    <!--        <div class="header__bottom">-->
-    <!--        </div>-->
-    <!--    </div>-->
 </header>
 
 <div class="s_hero">
     <div class="wrapper_fullHD">
-        <div class="hero hero_complex">
+        <div class="hero hero_weba">
             <div class="wrapper">
                 <div class="hero__first-row">
                     <div class="hero__first-row__left">
-                        <h1 class="white">КОНТЕКСТНАЯ РЕКЛАМА С АНАЛИТИКОЙ ОТ КЛИКОВ ДО ПРОДАЖ</h1>
-                        <a href="/services.html" class="btn btn_white">Все услуги</a>
+                        <h1 class="white">КОМПЛЕКСНАЯ<br>ВЕБ-АНАЛИТИКА</h1>
+                        <a href="/services.html" class="btn btn_transperent_white btn_arrowL">Все услуги</a>
                     </div>
                     <div class="hero__first-row__right">
-                        <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</a>
+                        <a href="#callback_modal" class="btn btn_gradient btn_arrowR" data-fancybox-modal>ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</a>
                     </div>
                 </div>
                 <div class="hero__second-row">
-                    <ul class="benefits__list benefits__list_complex">
-                        <li class="benefits__item benefits__item_complex">
-                            Опыт работы с 2012<br>года: работали во всех<br>нишах
+                    <ul class="benefits__list benefits__list_weba">
+                        <li class="benefits__item benefits__item_weba">
+                            Аудит сайта и<br>социальных сетей
                         </li>
-                        <li class="benefits__item benefits__item_complex">
-                            Авторский подход к<br>работе с РСЯ и<br>сегментами аудитории
+                        <li class="benefits__item benefits__item_weba">
+                            Анализ трафика более<br>чем по 50 показателей
                         </li>
                         <li class="benefits__item benefits__item_complex">
                             Сертифицированные<br>специалисты Яндекс и<br>Google
@@ -346,22 +340,24 @@
 
 <div class="s_approach">
     <div class="wrapper_fullHD">
-        <div class="approach">
+        <div class="approach approach_social">
             <div class="wrapper_right">
-                <img src="images/bg_web_analytics.jpg" class="approach__img">
-                <div class="approach__text-block">
-                    <h2 class="title"><span class="green">АНАЛИТИКА</span> - ФУНДАМЕНТ УСПЕШНОЙ РЕКЛАМНОЙ КАМПАНИИ</h2>
+                <h2 class="title"><span class="green">АНАЛИТИКА</span> – ФУНДАМЕНТ УСПЕШНОЙ<br>РЕКЛАМНОЙ КАМПАНИИ</h2>
 
+                <img src="images/bg_social_avtor.jpg" class="approach__img_social">
+
+                <div class="approach__text-block_social">
                     <p>Лишь многие известные личности и по сей день остаются уделом либералов, которые жаждут быть
                         объединены в целые кластеры себе подобных. В частности, высокое качество позиционных
                         исследований способствует подготовке и реализации поставленных обществом задач. Не следует,
                         однако, забывать, что повышение уровня гражданского сознания не оставляет шанса для
                         благоприятных перспектив.</p>
                     <p>С учётом сложившейся международной обстановки, разбавленное изрядной долей эмпатии, рациональное
-                        мышление является качественно новой ступенью существующих финансовых и административных условий.
-                        Безусловно, высокое качество позиционных исследований создаёт необходимость включения в
+                        мышление является качественно новой ступенью существующих финансовых и административных
+                        условий.</p>
+                    <p>Безусловно, высокое качество позиционных исследований создаёт необходимость включения в
                         производственный план целого ряда внеочередных мероприятий с учётом комплекса системы массового
-                        участия.</p>
+                        участия. </p>
                 </div>
             </div>
         </div>
@@ -430,7 +426,8 @@
 
 <div class="s_prices">
     <div class="wrapper">
-        <div class="prices prices_complex">
+        <div class="prices prices_weba">
+            <h2 class="title">НАШИ УСЛУГИ</h2>
             <div class="prices__block prices__block_blue prices__block_blue_small">
                 <span class="prices__title">Настройка аналитики</span>
                 <ul class="prices__list">
@@ -443,7 +440,7 @@
                 <div class="prices__info">Стоимость:<br><span class="blue">20 000 руб/мес.</span>
                 </div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
                 </div>
             </div>
@@ -460,13 +457,13 @@
                 <div class="prices__info">Стоимость:<br><span class="blue">20 000 руб/мес.</span>
                 </div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАКАЗАТЬ</a>
                 </div>
             </div>
             <div class="prices__block prices__block_olive prices__block_olive_web">
                 <span class="prices__title">Комплексное SMM-продвижение</span>
-                <ul class="prices__list prices__list_olive">
+                <ul class="prices__list prices__list_weba">
                     <li class="prices__list__item">Разработка стратегии по контенту и привлечению трафика</li>
                     <li class="prices__list__item">Оформление и упаковка страниц</li>
                     <li class="prices__list__item">Настройка чат-ботов и рассылки</li>
@@ -478,7 +475,7 @@
                 </ul>
                 <div class="prices__info">Стоимость настройки и ведения: <span class="blue">20 000 руб/мес.</span></div>
                 <div class="prices__links">
-                    <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ</a>
+                    <a href="#callback_modal" class="btn btn_gradient btn_gradient_small" data-fancybox-modal>ЗАКАЗАТЬ</a>
                     <a href="#callback_modal" class="btn btn_small btn_blue" data-fancybox-modal>ЗАДАТЬ ВОПРОС</a>
                 </div>
             </div>
