--- a/complex.html
+++ b/complex.html
@@ -147,7 +147,7 @@
                 <div class="hero__first-row">
                     <div class="hero__first-row__left">
                         <h1 class="white">КОНТЕКСТНАЯ РЕКЛАМА С АНАЛИТИКОЙ ОТ КЛИКОВ ДО ПРОДАЖ</h1>
-                        <a href="/services.html" class="btn btn_transperent_white btn_arrowL">Все услуги</a>
+                        <a href="#" class="btn btn_transperent_white btn_arrowL">Все услуги</a>
                     </div>
                     <div class="hero__first-row__right">
                         <a href="#callback_modal" class="btn btn_gradient btn_arrowR" data-fancybox-modal>ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</a>
@@ -538,7 +538,7 @@
     <div class="wrapper">
         <div class="voronka">
             <h2 class="title">СОЗДАДИМ <span class="green">ВОРОНКУ</span> ПРОДАЖ<br>ДЛЯ ВАШЕГО БИЗНЕСА!</h2>
-            <ul class="voronka__list">
+            <ul class="voronka__list voronka__list_blue">
                 <li class="voronka__line">
                     <span class="voronka__line__block voronka__line__block_left">Рассказываем<br>о продукте</span>
                     <span class="voronka__line__block voronka__line__block_center">Потенциальные клиенты пока не знают продукт, ищут решения проблемы</span>
